2022-05-20T16:23:11Z:
* notice: last 14d: unq all: 11 138
* notice: prev accum: outdated-unq outdated-all / unq all: 44 182 / 59 319
* notice: next accum: outdated-unq outdated-all / unq all: 44 182 / 60 320
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: changed dates: [2022-05-20]

2022-05-19T16:43:09Z:
* notice: last 14d: unq all: 10 137
* notice: prev accum: outdated-unq outdated-all / unq all: 44 182 / 57 316
* notice: next accum: outdated-unq outdated-all / unq all: 44 182 / 59 319
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: changed dates: [2022-05-19]

2022-05-19T01:36:01Z:
* notice: last 14d: unq all: 8 134
* notice: prev accum: outdated-unq outdated-all / unq all: 43 174 / 56 315
* notice: next accum: outdated-unq outdated-all / unq all: 44 182 / 57 316
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +17 -0 -0 / 2 17
* notice: changed dates: [2022-05-18]

2022-05-18T08:20:00Z:
* notice: last 14d: all unq: 141 7
* notice: prev accum: outdated-all outdated-unq / all unq: 174 43 / 299 55
* notice: next accum: outdated-all outdated-unq / all unq: 174 43 / 315 56
* notice: prev exec diff / last date diff / accum: unq all: +1 +16 -0 -0 / +1 +16 -0 -0 / 1 16
* notice: changed dates: [2022-05-18]

2022-05-18T01:11:52Z:
* notice: last 14d: all unq: 125 7
* notice: prev accum: outdated-all outdated-unq / all unq: 174 43 / 240 51
* notice: next accum: outdated-all outdated-unq / all unq: 174 43 / 299 55
* notice: prev exec diff / last date diff / accum: unq all: +4 +59 -0 -0 / +2 +57 -0 -0 / 2 57
* notice: changed dates: [2022-05-16 2022-05-17]

2022-05-15T08:19:32Z:
* notice: last 14d: all unq: 66 4
* notice: prev accum: outdated-all outdated-unq / all unq: 173 42 / 240 51
* notice: next accum: outdated-all outdated-unq / all unq: 174 43 / 240 51
* notice: prev json diff / prev day diff: unq all: +0 +0 -0 -0 / +0 +0 -0 -0