@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T16:23:11Z",
+  "timestamp" : "2022-05-21T16:21:30Z",
   "count_outdated" : 182,
   "uniques_outdated" : 44,
-  "count" : 320,
-  "uniques" : 60,
+  "count" : 330,
+  "uniques" : 61,
   "views" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 10,
+      "count_minmax": [ 10, 10 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
