@@ -1,5 +1,5 @@
 {
-  "count": 138,
+  "count": 148,
   "uniques": 11,
   "views": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 10,
       "uniques": 1
     }
   ]
