@@ -1,3 +1,10 @@
+2022-05-21T16:21:30Z:
+* notice: last 14d: unq all: 11 148
+* notice: prev accum: outdated-unq outdated-all / unq all: 44 182 / 60 320
+* notice: next accum: outdated-unq outdated-all / unq all: 44 182 / 61 330
+* notice: prev exec diff / last date diff / accum: unq all: +1 +10 -0 -0 / +1 +10 -0 -0 / 1 10
+* notice: changed dates: [2022-05-21]
+
 2022-05-20T16:23:11Z:
 * notice: last 14d: unq all: 11 138
 * notice: prev accum: outdated-unq outdated-all / unq all: 44 182 / 59 319
